2005-11-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: Minor fix for SOURCE_DIRECTORY

2005-11-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.3.3, SOURCE_HASH(sha512), UPSTREAM_HASH
	  cvs should be volatile not unversioned
	* PRE_BUILD: commented out the quickfix for mkinstalldirs, should be
	  removed on next update

2005-10-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.3.2, SOURCE_HASH(sha512)
	* PRE_BUILD: added a quickfix for missing mkinstalldirs

2005-09-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
        * DETAILS: version update 0.3.1, SOURCE_HASH(sha512),
          SOURCE_URL updated, uses KZ_CVS and KZ_CVS_AUTOUPDATE
        * PRE_BUILD: uses KZ_CVS
        * DEPENDS: uses gnutls instead of openssl now, dependson GECKO
        * PREPARE: now uses KZ_CVS and KZ_CVS_AUTOUPDATE to query for cvs
          and autoqueuening.
        * BUILD: Added options for use of firefox or mozilla

2005-07-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.2.9, MD5 updates, SOURCE_URL updated

2005-06-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.2.8, MD5 updates, SOURCE_URL updated

2005-05-11 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DEPENDS, DETAILS: use gcc 3.4, compiles but segfaults with gcc 4.0

2005-04-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.2.7, MD5 updates, SOURCE_URL updated

2005-03-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.2.6, MD5 updates, SOURCE_URL updated

2005-02-12 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: version update 0.2.5, minor cvs fix

2005-02-07 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS, PREPARE, DEPENDS, PRE_BUILD: cvs option added

2005-01-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS, HISTORY: Update to 0.2.4, do NOT tamper
	  with the source url we're missing the only three