@@ -1,0 +1,43 @@
+config_query_option  SEAMONKEY_MAILNEWS                  \
+                     'Build Mail/News client?'           \
+                     y                                   \
+                     '--enable-mailnews'                 \
+                     '--disable-mailnews'                &&
+config_query_option  SEAMONKEY_CHAT                      \
+                     'Build Chat component?'             \
+                     y                                   \
+                     '--enable-chat'                     \
+                     '--disable-chat'                    &&
+config_query_option  SEAMONKEY_CALENDAR                  \
+                     'Build Calendar component?'         \
+                     y                                   \
+                     '--enable-calendar'                 \
+                     '--disable-calendar'                &&
+config_query_option  SEAMONKEY_COMPOSER                  \
+                     'Build Composer component?'         \
+                     y                                   \
+                     '--enable-composer'                 \
+                     '--disable-composer'                &&
+config_query_option  SEAMONKEY_MATHML                    \
+                     'Enable MathML?'                    \
+                     y                                   \
+                     '--enable-mathml'                   \
+                     '--disable-mathml'                  &&
+config_query_option  SEAMONKEY_JS                        \
+                     'Build JavaScript profile tool?'    \
+                     n                                   \
+                     '--enable-xpctools'                 \
+                     '--disable-xpctools'                &&
+config_query_option  SEAMONKEY_XINERAMA                  \
+                     'Enable Xinerama support?'          \
+                     n                                   \
+                     '--enable-xinerama'                 \
+                     '--disable-xinerama'                &&
+#Seems to only build with cairo
+config_query_list  SEAMONKEY_RENDER                      \
+                   'Possible SVG renderers:'             \
+                     'none'  'cairo'                     &&
+#Getting rid of that annoying nullplugin
+config_query  SEAMONKEY_NULLPLUGIN                       \
+"Do you want nullplugin installed (to enable auto search and install of other plugins)" \
+              y
