@@ -1,0 +1,34 @@
+depends zip                                       &&
+depends perl                                      &&
+depends X11-LIBS  '--with-x'                      &&
+depends zlib   '--with-system-zlib'               &&
+depends jpeg   '--with-system-jpeg'               &&
+depends libpng '--with-system-png'                &&
+depends gtk+2  '--enable-default-toolkit=gtk2'    &&
+depends libidl '--with-libIDL'                    &&
+#Not tested
+optional_depends  openldap                         \
+                  '--enable-ldap'                  \
+                  '--disable-ldap'                 \
+                  'LDAP support'                   &&
+# Disabled until we get system nspr 4.6.1
+#optional_depends  nspr                             \
+#                  '--with-system-nspr'             \
+#                  '--without-system-nspr'          \
+#                  'NSPR support'                   &&
+optional_depends  nss                              \
+                  '--enable-crypto'                \
+                  '--disable-crypto'               \
+                  'for encrypted communications support (e.g. https://), recommended' &&
+optional_depends  gnome-vfs2                       \
+                  "--enable-gnomevfs"              \
+                  "--disable-gnomevfs"             \
+                   "for smb:// url support (if enabled in gnome-vfs)"  &&
+optional_depends  libgnomeui                       \
+                  "--enable-gnomeui"               \
+                  "--disable-gnomeui"              \
+                  "For GNOME UI support"           &&
+#Seems to only build with cairo
+if  [  "$SEAMONKEY_RENDER"  == "cairo"  ];  then
+  depends cairo "--enable-system-cairo --enable-svg --enable-svg-renderer=cairo"
+fi
