@@ -1,0 +1,34 @@
+           SPELL=seamonkey
+         VERSION=1.0a
+          SOURCE=$SPELL-$VERSION.source.tar.bz2
+     SOURCE_HASH=sha512:bd8be758ba9eb8147b8917360bd69b59739248ebb5adc7522419e4946a1718e286b04a238a082875190afef5d49603611557fe0830be8835a50d139493aad615
+SOURCE_DIRECTORY=$BUILD_DIRECTORY/mozilla
+      SOURCE_URI=seamonkey/releases/$VERSION/$SOURCE
+   SOURCE_URL[0]=http://ftp.mozilla.org/pub/mozilla.org/$SOURCE_URI
+   SOURCE_URL[1]=ftp://archive.progeny.com/$SOURCE_URI
+   SOURCE_URL[2]=http://ftp.oleane.net/pub/$SOURCE_URI
+   SOURCE_URL[3]=ftp://ftp.chg.ru/pub/WWW/mozilla/$SOURCE_URI
+   SOURCE_URL[4]=ftp://ftp.sunsite.kth.se/mirrors/ftp.mozilla.org/$SOURCE_URI
+   SOURCE_URL[5]=http://ftp.cvut.cz/$SOURCE_URI
+   SOURCE_URL[6]=ftp://ftp.mirror.ac.uk/sites/ftp.mozilla.org/pub/$SOURCE_URI
+   SOURCE_URL[7]=http://mirrors.xmission.com/$SOURCE_URI
+   SOURCE_URL[8]=ftp://gd.tuwien.ac.at/infosys/browsers/$SOURCE_URI
+   SOURCE_URL[9]=ftp://ftp.planetmirror.com.au/pub/$SOURCE_URI
+  SOURCE_URL[10]=http://ftp.uni-erlangen.de/pub/mirrors/$SOURCE_URI
+  SOURCE_URL[11]=ftp://ftp.free.fr/pub/Networking/www/Mozilla/$SOURCE_URI
+  SOURCE_URL[12]=ftp://ftp.eunet.ie/mirrors/ftp.mozilla.org/pub/$SOURCE_URI
+        WEB_SITE=http://www.mozilla.org/
+         ENTERED=20010922
+         UPDATED=20050919
+      LICENSE[0]=MPL
+       BUILD_API=2
+            DOCS="LICENSE README.txt"
+           SHORT="Web browser and a rich cient application platform"
+cat << EOF
+The SeaMonkey project is a community effort to deliver production-quality
+releases of code derived from the application formerly known as "Mozilla
+Application Suite". Whereas the main focus of the Mozilla Foundation is on
+Mozilla Firefox and Mozilla Thunderbird, our group of dedicated volunteers
+works to ensure that you can have "everything but the kitchen sink" — and
+have it stable enough for corporate use.
+EOF
