@@ -1,0 +1,5 @@
+provides  MOZILLA-BROWSER        &&
+provides  EMAIL-CLIENT           &&
+provides  WEB-BROWSER            &&
+provides  GRAPHICAL-WEB-BROWSER  &&
+provides  GECKO
