@@ -1,0 +1,5 @@
+until kazehakase or something else has proper support this stays in
+devel grimoire
+Kazehakase has a slight bug in the configure script which I already
+reported so when that's fixed and a new release is out(29.12.2005)
+I'll pull this into test unless someone else beats me to it before :)
