@@ -1,0 +1,8 @@
+[Desktop Entry]
+Encoding=UTF-8
+Name=Seamonkey
+Exec=seamonkey
+Icon=
+Terminal=false
+Type=Application
+Categories=Application;Network;Browsers;
