@@ -1,0 +1,6 @@
+2005-12-07 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+	* WIP: stays in devel for now
+
+2005-12-06 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+	* DETAILS, PRE_BUILD, BUILD, INSTALL, PROVIDES, DEPENDS, HISTORY: created spell
+	* seamonkey.sh, desktop/seamonkey.desktop: created spell
