@@ -1,3 +1,6 @@
+2005-12-07 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD: added support for seamonkey
+
 2005-11-29 Andrew "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: Minor fix for SOURCE_DIRECTORY
 
